Removed remaining *.html endings.

--- a/src/page.hbs
+++ b/src/page.hbs
@@ -1,6 +1,6 @@
 <h1>{{Title}}</h1>
 {{#if Namespace}}
-<p><b>Namespace:</b> <a href="Namespace.{{Namespace}}.html">{{Namespace}}</a></p>
+<p><b>Namespace:</b> <a href="/Namespace.{{Namespace}}">{{Namespace}}</a></p>
 {{/if}}
 {{#if Description}}
 <p>{{doc Description}}</p>
