--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,5 +1,5 @@
 <h1>Index</h1>
-<p>Sven Co-op AngelScript API documentation.</p>
+<p>Sven Co-op {{GameVersion}} AngelScript API documentation</p>
 <h2>Contents</h2>
 <ul>
 	<li><a href='/Classes'>Classes</a></li>
